--- a/notebooks/LGBM1-2.ipynb
+++ b/notebooks/LGBM1-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +23,7 @@
     "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
     "import scipy.stats as stats\n",
     "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.metrics import make_scorer\n",
     "# stat shit\n",
     "import statsmodels.api as sm\n",
     "from statsmodels.graphics import tsaplots\n",
@@ -76,16 +77,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
     "#basic functions\n",
+    "\n",
+    "#this one is prob redundant\n",
     "to_datetime = lambda timestamp: datetime.strftime(datetime.fromtimestamp(timestamp),\"%Y-%m-%d\")\n",
     "\n",
-    "get_month = lambda timestamp: to_datetime(timestamp)[5:7]\n",
+    "get_month_timestamp = lambda timestamp: to_datetime(timestamp).month\n",
     "\n",
+    "get_month = lambda datetime: datetime.month\n",
     "\n",
+    "get_month_day = lambda datetime: datetime.strftime(\"%m-%d\")\n",
     "\n",
     "############# Two new features from the competition tutorial\n",
     "def log_return(series, periods=1):\n",
@@ -113,8 +118,8 @@
     "    return np.sqrt(sum((r_i - rt_mean) ** 2 for r_i in rt) * N / (len(rt) - 1))\n",
     "\n",
     "########## function for calling all feature creating functions\n",
-    "def get_features(df):\n",
-    "    df_feat = df[[\"Count\", \"Open\",\"High\", \"Low\", \"Close\", \"Volume\",\"VWAP\"]].copy()\n",
+    "def get_features(df, Lag=True):\n",
+    "    df_feat = df[[\"Count\", \"Open\",\"High\", \"Low\", \"Close\", \"Volume\",\"VWAP\", \"Target\"]].copy()\n",
     "    \n",
     "    df_feat[\"Upper_shadow\"] = upper_shadow(df_feat)\n",
     "    df_feat[\"Lower_shadow\"] = lower_shadow(df_feat)\n",
@@ -122,66 +127,57 @@
     "    df_feat[\"Volume\"] = log_return(df_feat[\"Volume\"]) # maybe Volume is fine just like that(?)\n",
     "    df_feat[\"Count\"] = log_return(df_feat[\"Count\"])\n",
     "    df_feat[\"VWAP\"] = log_return(df_feat[\"VWAP\"])\n",
-    "\n",
-    "    roll_feature = \"VWAP\"; lag = 2\n",
-    "    df_feat[\"rolled_\"+roll_feature+f\"_{lag}\"] = \\\n",
-    "        roll(df_feat[roll_feature].values)\n",
+    "    df_feat = df_feat[1:] # compensate\n",
+    "    if Lag:\n",
+    "        for lag in range(1, 6):\n",
+    "            roll_feature = \"VWAP\"\n",
+    "            df_feat[\"rolled_\"+roll_feature+f\"_{lag}\"] = \\\n",
+    "                roll(df_feat[roll_feature].values, lag)\n",
+    "    \n",
+    "    ########### for now, simple dropna()     ########### \n",
+    "    ########### later we can use reindexing  ########### \n",
+    "    df_feat.dropna(inplace=True)\n",
+    "    # df_feat = df_feat.reindex(range(btc.index[0],btc.index[-1]+60, 60), method=\"pad\")\n",
     "\n",
     "    return df_feat\n",
     "\n",
     "\n",
-    "def Xy_model_asset(train, asset_id):\n",
+    "def Xy_model_asset(train, asset_id, Lag=True):\n",
     "    df = train[train[\"Asset_ID\"]==asset_id]\n",
     "\n",
     "    # todo : try different features here \n",
     "    #        also, scale the features\n",
-    "    df_proc = get_features(df)\n",
+    "    df_proc = get_features(df, Lag)\n",
+    "\n",
     "    df_proc[\"y\"] = df[\"Target\"]\n",
+    "    # 念の為\n",
     "    df_proc.dropna(how=\"any\", inplace=True)\n",
     "    X = df_proc.drop(\"y\", axis=1)\n",
     "    y = df_proc[\"y\"]\n",
     "\n",
     "    # todo : try different models here\n",
-    "    model = LGBMRegressor(n_estimators=10)\n",
-    "    model.fit(X, y)\n",
-    "    return X, y, model\n",
+    "    # model = LGBMRegressor()\n",
+    "    # model.fit(X, y)\n",
+    "    return X, y#, model\n",
     "\n",
-    "def scorer(X, y, model):\n",
+    "\n",
+    "def scorer(model, X, y):\n",
     "    # not sure how this line works, just trying\n",
     "    y_pred = model.predict([X])[0]\n",
     "    score = np.corrcoef(y_pred, y)\n",
-    "    return score\n"
+    "    return score\n",
+    "\n",
+    "my_scorer = make_scorer(scorer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_assets = train.groupby(\"Asset_ID\")\n",
     "# asset_dict = {name:train_assets[group] for name, group in zip(asset_d.Asset_Name, asset_d.Asset_ID)}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "timestamp\n1514764920   -0.001595\n1514764980   -0.001939\n1514765040   -0.002414\n1514765100   -0.003137\n1514765160   -0.000569\n                ...   \n1623542100    0.000133\n1623542160   -0.001106\n1623542220   -0.000798\n1623542280    0.002040\n1623542340    0.000785\nName: lret_btc, Length: 1812958, dtype: float64"
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "btc = train_assets.get_group(1).set_index(\"timestamp\")\n",
-    "btc = btc.reindex(range(btc.index[0],btc.index[-1]+60, 60), method=\"pad\")\n",
-    "lret_btc_long = log_return(btc.Close)[1:]\n",
-    "lret_btc_long.rename(\"lret_btc\", inplace=True)"
    ]
   },
   {
@@ -200,22 +196,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": "98.77089202282708"
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'> <class 'pandas.core.series.Series'>\n",
+      "0.9355156853655835\n"
+     ]
     }
    ],
    "source": [
     "model = LGBMRegressor()\n",
-    "scores = cross_val_score(model, X, y, cv = 5, scoring=scorer)\n",
-    "print(scores)\n"
+    "X, y = Xy_model_asset(train, 1)\n",
+    "print(type(X), type(y))\n",
+    "scores = cross_val_score(model, X, y, cv = 5)#, scoring=scorer)\n",
+    "print(scores, \"\\n\", np.mean(scores))\n"
    ]
   },
   {
@@ -233,9 +231,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "asset_d"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
