--- a/notebooks/LGBM1-2.ipynb
+++ b/notebooks/LGBM1-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
     "import numpy as np # linear algebra\n",
     "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
     "import scipy.stats as stats\n",
-    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import cross_val_score, KFold\n",
     "from sklearn.metrics import make_scorer\n",
     "# stat shit\n",
     "import statsmodels.api as sm\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,6 +160,22 @@
     "    # model.fit(X, y)\n",
     "    return X, y#, model\n",
     "\n",
+    "def weighted_correlation(a, b, weights): # a is preds, b is gt\n",
+    "\n",
+    "  w = np.ravel(weights)\n",
+    "  a = np.ravel(a)\n",
+    "  b = np.ravel(b)\n",
+    "\n",
+    "  sum_w = np.sum(w)\n",
+    "  mean_a = np.sum(a * w) / sum_w\n",
+    "  mean_b = np.sum(b * w) / sum_w\n",
+    "  var_a = np.sum(w * np.square(a - mean_a)) / sum_w\n",
+    "  var_b = np.sum(w * np.square(b - mean_b)) / sum_w\n",
+    "\n",
+    "  cov = np.sum((a * b * w)) / np.sum(w) - mean_a * mean_b\n",
+    "  corr = cov / np.sqrt(var_a * var_b)\n",
+    "\n",
+    "  return corr\n",
     "\n",
     "def scorer(model, X, y):\n",
     "    # not sure how this line works, just trying\n",
@@ -167,12 +183,13 @@
     "    score = np.corrcoef(y_pred, y)\n",
     "    return score\n",
     "\n",
+    "\n",
     "my_scorer = make_scorer(scorer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +221,8 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'> <class 'pandas.core.series.Series'>\n",
-      "0.9355156853655835\n"
+      "[0.95929106 0.96415332 0.88945699 0.95953581 0.91125602] \n",
+      " 0.9367386392096602\n"
      ]
     }
    ],
@@ -218,20 +236,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Asset_ID</th>\n      <th>Weight</th>\n      <th>Asset_Name</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2</td>\n      <td>2.397895</td>\n      <td>Bitcoin Cash</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>4.304065</td>\n      <td>Binance Coin</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>6.779922</td>\n      <td>Bitcoin</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>5</td>\n      <td>1.386294</td>\n      <td>EOS.IO</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>7</td>\n      <td>2.079442</td>\n      <td>Ethereum Classic</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>6</td>\n      <td>5.894403</td>\n      <td>Ethereum</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>9</td>\n      <td>2.397895</td>\n      <td>Litecoin</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>11</td>\n      <td>1.609438</td>\n      <td>Monero</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>13</td>\n      <td>1.791759</td>\n      <td>TRON</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>12</td>\n      <td>2.079442</td>\n      <td>Stellar</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>3</td>\n      <td>4.406719</td>\n      <td>Cardano</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>8</td>\n      <td>1.098612</td>\n      <td>IOTA</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>10</td>\n      <td>1.098612</td>\n      <td>Maker</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>4</td>\n      <td>3.555348</td>\n      <td>Dogecoin</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
-      "text/plain": "    Asset_ID    Weight        Asset_Name\n0          2  2.397895      Bitcoin Cash\n1          0  4.304065      Binance Coin\n2          1  6.779922           Bitcoin\n3          5  1.386294            EOS.IO\n4          7  2.079442  Ethereum Classic\n5          6  5.894403          Ethereum\n6          9  2.397895          Litecoin\n7         11  1.609438            Monero\n8         13  1.791759              TRON\n9         12  2.079442           Stellar\n10         3  4.406719           Cardano\n11         8  1.098612              IOTA\n12        10  1.098612             Maker\n13         4  3.555348          Dogecoin"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Count</th>\n      <th>Open</th>\n      <th>High</th>\n      <th>Low</th>\n      <th>Close</th>\n      <th>Volume</th>\n      <th>VWAP</th>\n      <th>Target</th>\n      <th>Upper_shadow</th>\n      <th>Lower_shadow</th>\n      <th>rolled_VWAP_1</th>\n      <th>rolled_VWAP_2</th>\n      <th>rolled_VWAP_3</th>\n      <th>rolled_VWAP_4</th>\n      <th>rolled_VWAP_5</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>10</th>\n      <td>0.025864</td>\n      <td>13835.036000</td>\n      <td>14052.30000</td>\n      <td>13680.00</td>\n      <td>13828.102000</td>\n      <td>-0.016092</td>\n      <td>0.000961</td>\n      <td>-0.015037</td>\n      <td>217.264000</td>\n      <td>148.102000</td>\n      <td>0.000032</td>\n      <td>0.001131</td>\n      <td>-0.001567</td>\n      <td>-0.000113</td>\n      <td>-0.000100</td>\n    </tr>\n    <tr>\n      <th>18</th>\n      <td>0.809511</td>\n      <td>13823.900000</td>\n      <td>14000.40000</td>\n      <td>13601.00</td>\n      <td>13801.314000</td>\n      <td>0.572973</td>\n      <td>-0.002481</td>\n      <td>-0.010309</td>\n      <td>176.500000</td>\n      <td>200.314000</td>\n      <td>0.000961</td>\n      <td>0.000032</td>\n      <td>0.001131</td>\n      <td>-0.001567</td>\n      <td>-0.000113</td>\n    </tr>\n    <tr>\n      <th>26</th>\n      <td>-0.193750</td>\n      <td>13802.512000</td>\n      <td>13999.00000</td>\n      <td>13576.28</td>\n      <td>13768.040000</td>\n      <td>-0.350538</td>\n      <td>-0.001629</td>\n      <td>-0.008999</td>\n      <td>196.488000</td>\n      <td>191.760000</td>\n      <td>-0.002481</td>\n      <td>0.000961</td>\n      <td>0.000032</td>\n      <td>0.001131</td>\n      <td>-0.001567</td>\n    </tr>\n    <tr>\n      <th>34</th>\n      <td>0.534003</td>\n      <td>13766.000000</td>\n      <td>13955.90000</td>\n      <td>13554.44</td>\n      <td>13724.914000</td>\n      <td>1.028847</td>\n      <td>-0.003489</td>\n      <td>-0.008079</td>\n      <td>189.900000</td>\n      <td>170.474000</td>\n      <td>-0.001629</td>\n      <td>-0.002481</td>\n      <td>0.000961</td>\n      <td>0.000032</td>\n      <td>0.001131</td>\n    </tr>\n    <tr>\n      <th>42</th>\n      <td>-0.292185</td>\n      <td>13717.714000</td>\n      <td>14000.70000</td>\n      <td>13520.00</td>\n      <td>13717.112000</td>\n      <td>-0.426825</td>\n      <td>-0.002087</td>\n      <td>-0.004422</td>\n      <td>282.986000</td>\n      <td>197.112000</td>\n      <td>-0.003489</td>\n      <td>-0.001629</td>\n      <td>-0.002481</td>\n      <td>0.000961</td>\n      <td>0.000032</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>22221627</th>\n      <td>-0.105361</td>\n      <td>35512.214286</td>\n      <td>35557.00000</td>\n      <td>35495.20</td>\n      <td>35518.808571</td>\n      <td>0.006912</td>\n      <td>-0.000100</td>\n      <td>0.002982</td>\n      <td>38.191429</td>\n      <td>17.014286</td>\n      <td>-0.000669</td>\n      <td>0.000286</td>\n      <td>0.001095</td>\n      <td>0.000421</td>\n      <td>-0.002192</td>\n    </tr>\n    <tr>\n      <th>22221641</th>\n      <td>0.265868</td>\n      <td>35518.764114</td>\n      <td>35560.00000</td>\n      <td>35444.30</td>\n      <td>35479.547218</td>\n      <td>0.542715</td>\n      <td>-0.000113</td>\n      <td>0.002965</td>\n      <td>41.235886</td>\n      <td>35.247218</td>\n      <td>-0.000100</td>\n      <td>-0.000669</td>\n      <td>0.000286</td>\n      <td>0.001095</td>\n      <td>0.000421</td>\n    </tr>\n    <tr>\n      <th>22221655</th>\n      <td>0.358498</td>\n      <td>35476.735920</td>\n      <td>35500.10369</td>\n      <td>35420.32</td>\n      <td>35451.233956</td>\n      <td>-0.051945</td>\n      <td>-0.001567</td>\n      <td>0.002798</td>\n      <td>23.367770</td>\n      <td>30.913956</td>\n      <td>-0.000113</td>\n      <td>-0.000100</td>\n      <td>-0.000669</td>\n      <td>0.000286</td>\n      <td>0.001095</td>\n    </tr>\n    <tr>\n      <th>22221669</th>\n      <td>-0.461749</td>\n      <td>35456.720000</td>\n      <td>35540.70000</td>\n      <td>35443.09</td>\n      <td>35523.640000</td>\n      <td>-0.406577</td>\n      <td>0.001131</td>\n      <td>0.002177</td>\n      <td>17.060000</td>\n      <td>13.630000</td>\n      <td>-0.001567</td>\n      <td>-0.000113</td>\n      <td>-0.000100</td>\n      <td>-0.000669</td>\n      <td>0.000286</td>\n    </tr>\n    <tr>\n      <th>22221683</th>\n      <td>0.275381</td>\n      <td>35520.585714</td>\n      <td>35573.40000</td>\n      <td>35443.20</td>\n      <td>35551.520000</td>\n      <td>0.532539</td>\n      <td>0.000032</td>\n      <td>0.002776</td>\n      <td>21.880000</td>\n      <td>77.385714</td>\n      <td>0.001131</td>\n      <td>-0.001567</td>\n      <td>-0.000113</td>\n      <td>-0.000100</td>\n      <td>-0.000669</td>\n    </tr>\n  </tbody>\n</table>\n<p>1811995 rows × 15 columns</p>\n</div>",
+      "text/plain": "             Count          Open         High       Low         Close  \\\n10        0.025864  13835.036000  14052.30000  13680.00  13828.102000   \n18        0.809511  13823.900000  14000.40000  13601.00  13801.314000   \n26       -0.193750  13802.512000  13999.00000  13576.28  13768.040000   \n34        0.534003  13766.000000  13955.90000  13554.44  13724.914000   \n42       -0.292185  13717.714000  14000.70000  13520.00  13717.112000   \n...            ...           ...          ...       ...           ...   \n22221627 -0.105361  35512.214286  35557.00000  35495.20  35518.808571   \n22221641  0.265868  35518.764114  35560.00000  35444.30  35479.547218   \n22221655  0.358498  35476.735920  35500.10369  35420.32  35451.233956   \n22221669 -0.461749  35456.720000  35540.70000  35443.09  35523.640000   \n22221683  0.275381  35520.585714  35573.40000  35443.20  35551.520000   \n\n            Volume      VWAP    Target  Upper_shadow  Lower_shadow  \\\n10       -0.016092  0.000961 -0.015037    217.264000    148.102000   \n18        0.572973 -0.002481 -0.010309    176.500000    200.314000   \n26       -0.350538 -0.001629 -0.008999    196.488000    191.760000   \n34        1.028847 -0.003489 -0.008079    189.900000    170.474000   \n42       -0.426825 -0.002087 -0.004422    282.986000    197.112000   \n...            ...       ...       ...           ...           ...   \n22221627  0.006912 -0.000100  0.002982     38.191429     17.014286   \n22221641  0.542715 -0.000113  0.002965     41.235886     35.247218   \n22221655 -0.051945 -0.001567  0.002798     23.367770     30.913956   \n22221669 -0.406577  0.001131  0.002177     17.060000     13.630000   \n22221683  0.532539  0.000032  0.002776     21.880000     77.385714   \n\n          rolled_VWAP_1  rolled_VWAP_2  rolled_VWAP_3  rolled_VWAP_4  \\\n10             0.000032       0.001131      -0.001567      -0.000113   \n18             0.000961       0.000032       0.001131      -0.001567   \n26            -0.002481       0.000961       0.000032       0.001131   \n34            -0.001629      -0.002481       0.000961       0.000032   \n42            -0.003489      -0.001629      -0.002481       0.000961   \n...                 ...            ...            ...            ...   \n22221627      -0.000669       0.000286       0.001095       0.000421   \n22221641      -0.000100      -0.000669       0.000286       0.001095   \n22221655      -0.000113      -0.000100      -0.000669       0.000286   \n22221669      -0.001567      -0.000113      -0.000100      -0.000669   \n22221683       0.001131      -0.001567      -0.000113      -0.000100   \n\n          rolled_VWAP_5  \n10            -0.000100  \n18            -0.000113  \n26            -0.001567  \n34             0.001131  \n42             0.000032  \n...                 ...  \n22221627      -0.002192  \n22221641       0.000421  \n22221655       0.001095  \n22221669       0.000286  \n22221683      -0.000669  \n\n[1811995 rows x 15 columns]"
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([[1.        , 0.97950478],\n",
+      "       [0.97950478, 1.        ]]), array([[1.        , 0.98203391],\n",
+      "       [0.98203391, 1.        ]]), array([[1.        , 0.94337342],\n",
+      "       [0.94337342, 1.        ]]), array([[1.        , 0.97956864],\n",
+      "       [0.97956864, 1.        ]]), array([[1.        , 0.95460958],\n",
+      "       [0.95460958, 1.        ]])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "kf = KFold(n_splits=5)\n",
+    "model = LGBMRegressor()\n",
+    "scores = []\n",
+    "for train_idx, test_idx in kf.split(X):\n",
+    "    X_train, X_test = X.iloc[train_idx], X.iloc[test_idx]\n",
+    "    y_train, y_test = y.iloc[train_idx], y.iloc[test_idx]\n",
+    "    model.fit(X_train, y_train)\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    scores.append(np.corrcoef(y_pred, y_test))\n",
+    "\n",
+    "print(scores)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 4  5  6  7  8  9 10 11 12 13 14 15 16 17 18] [0 1 2 3]\n",
+      "[ 0  1  2  3  8  9 10 11 12 13 14 15 16 17 18] [4 5 6 7]\n",
+      "[ 0  1  2  3  4  5  6  7 12 13 14 15 16 17 18] [ 8  9 10 11]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 16 17 18] [12 13 14 15]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15] [16 17 18]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = np.zeros(19)\n",
+    "kf.split(list)\n",
+    "for i, j in kf.split(list):\n",
+    "    print(i, j)"
+   ]
   },
   {
    "cell_type": "code",
